@@ -11,7 +11,9 @@ import org.springframework.data.domain.Page;
 import org.springframework.data.domain.PageImpl;
 import org.springframework.test.context.TestPropertySource;
 import pl.master.test.library.model.Book;
+import pl.master.test.library.model.Client;
 import pl.master.test.library.repository.BookRepository;
+import pl.master.test.library.repository.ClientRepository;
 
 import java.time.LocalDateTime;
 import java.util.Arrays;
@@ -32,49 +34,34 @@ class DailyNotificationServiceTest {
     private BookRepository bookRepository;
 
     @Mock
+    private ClientRepository clientRepository;
+
+    @Mock
     private RegistrationService registrationService;
 
-
     @BeforeEach
-    void setUp(){
+    void setUp() {
         dailyNotificationService.setBatchSize(10);
     }
 
     @Test
-    void sendDailyNotifications_NoNewBooks() {
-        Page<Book> emptyPage = new PageImpl<>(Collections.emptyList());
-        when(bookRepository.findAllByCreatedDateAfter(any(LocalDateTime.class), any())).thenReturn(emptyPage);
+    void sendDailyNotifications_NoSubscribedClients() {
+        Page<Client> emptyPage = new PageImpl<>(Collections.emptyList());
+        when(clientRepository.findAllByEnabledTrueAndSubscriptionsNotEmpty(any())).thenReturn(emptyPage);
 
         dailyNotificationService.sendDailyNotifications();
 
-        verify(bookRepository, atMostOnce()).findAllByCreatedDateAfter(any(), any());
+        verify(clientRepository, atMostOnce()).findAllByEnabledTrueAndSubscriptionsNotEmpty(any());
         verifyNoMoreInteractions(bookRepository, registrationService);
     }
 
     @Test
-    void sendDailyNotifications_NewBooksAvailable() {
-        Book book = new Book();
-        Page<Book> bookPage = new PageImpl<>(Collections.singletonList(book));
-        when(bookRepository.findAllByCreatedDateAfter(any(LocalDateTime.class), any())).thenReturn(bookPage);
-        when(bookRepository.findEmailsOfClientsSubscribedToAuthorOrCategory(any(), any())).thenReturn(new HashSet<>());
-
-        dailyNotificationService.sendDailyNotifications();
-
-        verify(bookRepository, atMostOnce()).findAllByCreatedDateAfter(any(), any());
-        verify(bookRepository, atMostOnce()).findEmailsOfClientsSubscribedToAuthorOrCategory(any(), any());
-        verify(registrationService, never()).newLibraryPosition(any(), any());
-    }
-
-    @Test
-    void sendDailyNotifications_NewBooksButNoInterestedClients() {
-        Book book = new Book();
-        book.setAuthor("Author");
-        book.setCategory("Category");
-
-        when(bookRepository.findAllByCreatedDateAfter(any(LocalDateTime.class), any()))
-                .thenReturn(new PageImpl<>(List.of(book)));
-        when(bookRepository.findEmailsOfClientsSubscribedToAuthorOrCategory(anyString(), anyString()))
-                .thenReturn(new HashSet<>());
+    void sendDailyNotifications_SubscribedClients_NoNewBooks() {
+        Client client = new Client();
+        client.setSubscribedAuthors(Collections.singleton("Author"));
+        client.setSubscribedCategories(Collections.singleton("Category"));
+        when(clientRepository.findAllByEnabledTrueAndSubscriptionsNotEmpty(any())).thenReturn(new PageImpl<>(List.of(client)));
+        when(bookRepository.findAllByAuthorOrCategoryInAndCreatedDateAfter(anySet(), anySet(), any())).thenReturn(Collections.emptyList());
 
         dailyNotificationService.sendDailyNotifications();
 
@@ -82,19 +69,21 @@ class DailyNotificationServiceTest {
     }
 
     @Test
-    void sendDailyNotifications_NewBooksAndInterestedClients() {
+    void sendDailyNotifications_SubscribedClients_WithNewBooks() {
+        Client client = new Client();
+        client.setEmail("email@example.com");
+        client.setSubscribedAuthors(Collections.singleton("Author"));
+        client.setSubscribedCategories(Collections.singleton("Category"));
         Book book = new Book();
+        book.setTitle("Title");
         book.setAuthor("Author");
         book.setCategory("Category");
-
-        when(bookRepository.findAllByCreatedDateAfter(any(LocalDateTime.class), any()))
-                .thenReturn(new PageImpl<>(List.of(book)));
-        when(bookRepository.findEmailsOfClientsSubscribedToAuthorOrCategory(anyString(), anyString()))
-                .thenReturn(new HashSet<>(List.of("test@test.com")));
+        when(clientRepository.findAllByEnabledTrueAndSubscriptionsNotEmpty(any())).thenReturn(new PageImpl<>(List.of(client)));
+        when(bookRepository.findAllByAuthorOrCategoryInAndCreatedDateAfter(anySet(), anySet(), any())).thenReturn(List.of(book));
 
         dailyNotificationService.sendDailyNotifications();
 
-        verify(registrationService, times(1)).newLibraryPosition(eq("test@test.com"), anyString());
+        verify(registrationService, times(1)).newLibraryPosition(anyString(), anyString());
     }
 
 
